<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemSelector"
    android:layout_margin="10dp"
    >

    <!-- Type de sélection -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_type"
            android:textSize="20sp"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <!-- Recherche -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="none"
            android:inputType="text"
            android:hint="@string/hint_search"/>

    </LinearLayout>

    <!-- Liste des éléments -->
    <ListView
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/list_view"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <!-- Bouton de validation / annulation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="15dp"
            />

        <Button
            android:id="@+id/annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            tools:ignore="ButtonStyle"
            />
    </LinearLayout>

</LinearLayout>